--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         let myChart = null;
         let currentEditExpenseId = null;
 
-        const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/.json";
+        const FIREBASE_URL = "const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/tisalgroup/.json";
 
         // --- LOGIN LOGIC ---
         function handleLogin() {
