--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
     </div></div>
 
     <script>
-        const KEYS = { 
-    BUS: 'tisal_buses', 
-    SCHED: 'tisal_scheds', 
-    EXP: 'tisal_exps', 
+const KEYS = { 
+    BUS: 'tisal_bus_v1', 
+    SCHED: 'tisal_sched_v1', 
+    EXP: 'tisal_exp_v1', 
     USER: 'tisal_session', 
     PASS: 'tisal_passwords' 
 };
@@ -476,7 +476,7 @@
         let myChart = null;
         let currentEditExpenseId = null;
 
-        const FIREBASE_URL = "const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/tisalgroup/.json";
+const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/tisalgroup/.json";
 
         // --- LOGIN LOGIC ---
         function handleLogin() {
