--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ const KEYS = {
         let myChart = null;
         let currentEditExpenseId = null;
 
-const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/tisalgroup/.json";
+const FIREBASE_URL = "https://bus-managemen-5fca8-default-rtdb.asia-southeast1.firebasedatabase.app/tisalgroup.json";
 
         // --- LOGIN LOGIC ---
         function handleLogin() {
@@ -1766,4 +1766,5 @@ function formatDateDisplay(dateStr) {
     </script>
 </body>
 </html>
+
 
