--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <button class="btn-blue" onclick="changeMonth(1)">▶</button>
                         </div>
                         <div style="display:flex; gap:8px;">				
-						<button class="btn-green" onclick="openBusStatsModal()"       disabled style="opacity: 0.5; "       >📊 Statistik Armada</button>
+						<button class="btn-green" onclick="openBusStatsModal()"    >📊 Statistik Armada</button>
                             <button class="btn-orange" onclick="openExpenseModal()">💸 Biaya OPS</button>
                             <button class="btn-gray" onclick="openFleetModal()">🚌 Armada</button>
                             <button class="btn-blue" onclick="openScheduleModal()">🗓️ Jadwal</button>
@@ -1812,6 +1812,7 @@ function setQuickFilter(status) {
     </script>
 </body>
 </html>
+
 
 
 
